# mcp-for-redash

./: LICENSE  README.md  config.example.json  pyproject.toml
src/redash_mcp_server/: __init__.py  config.py  redash_api.py  server.py
src/redash_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_redash_api.py
