[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redash-mcp-server"
version = "0.1.0"
description = "MCP server for Redash built on top of the Redash HTTP API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0,<2",
  "requests>=2.31.0,<3",
]

[project.scripts]
redash-mcp-server = "redash_mcp_server.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
